--- a/index.html
+++ b/index.html
@@ -2,13 +2,165 @@
 <html lang="en-US">
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.6.0.js"></script>
   <script src="js/scripts.js"></script>
-  <title>HTML help</title>
+  <title>jQuery Flashcards</title>
 </head>
 <body>
-  <div class="jumbotron" id="container giraffe-showing">
-    <p>text</p>
+  <div class="row">
+    <div class="col-3 jvs-clickable clickable">
+      <div id="jvs-hidden hidden">
+        <p>JavaScript</p>
+      </div>
+      <div id="jvs-showing">
+        <p>JavaScript is the programming language of the Web</p>
+      </div>
+    </div>
+    <div class="col-3 operators-clickable clickable">
+      <div id="operators-hidden hidden">
+        <p>Operators</p>
+      </div>
+      <div id="operators-showing">
+        <p>Operators definition</p>
+      </div>
+    </div>
+    <div class="col-3 var-clickable clickable">
+      <div id="var-hidden hidden">
+        <p>Variables</p>
+      </div>
+      <div id="var-showing">
+        <p>JavaScript variables can hold numbers like 100 and text values like "John Doe"</p>
+      </div>
+    </div>
+    <div class="col-3 var-name-clickable clickable">
+      <div id="var-name-hidden hidden">
+        <p>Variable naming conventions</p>
+      </div>
+      <div id="var-name-showing">
+        <p>Variable naming conventions definition</p>
+      </div>
+    </div>
+    <div class="col-3 funion-clickable clickable">
+      <div id="funion-hidden hidden">
+        <p>Functions</p>
+      </div>
+      <div id="funion-showing">
+        <p>Functions definition</p>
+      </div>
+    </div>
+    <div class="col-3 methods-clickable clickable">
+      <div id="methods-hidden hidden">
+        <p>Methods</p>
+      </div>
+      <div id="methods-showing">
+        <p>Methods definition</p>
+      </div>
+    </div>
+    <div class="col-3 arguments-clickable clickable">
+      <div id="arguments-hidden hidden">
+        <p>Arguments</p>
+      </div>
+      <div id="arguments-showing">
+        <p>Arguments definition</p>
+      </div>
+    </div>
+    <div class="col-3 Parameters-clickable clickable">
+      <div id="Parameters-hidden hidden">
+        <p>Parameters</p>
+      </div>
+      <div id="Parameters-showing">
+        <p>Parameters definition</p>
+      </div>
+    </div>
+    <div class="col-3 Return-clickable clickable">
+      <div id="Return-hidden hidden">
+        <p>Return</p>
+      </div>
+      <div id="Return-showing">
+        <p>Return definition</p>
+      </div>
+    </div>
+    <div class="col-3 chaining-methods-clickable clickable">
+      <div id="chaining-methods-hidden hidden">
+        <p>Chaining methods</p>
+      </div>
+      <div id="chaining-methods-showing">
+        <p>Chaining methods definition</p>
+      </div>
+    </div>
+    <div class="col-3 Strings-clickable clickable">
+      <div id="Strings-hidden hidden">
+        <p>Strings</p>
+      </div>
+      <div id="Strings-showing">
+        <p>Strings definition</p>
+      </div>
+    </div>
+    <div class="col-3 Booleans-clickable clickable">
+      <div id="Booleans-hidden hidden">
+        <p>Booleans</p>
+      </div>
+      <div id="Booleans-showing">
+        <p>Booleans definition</p>
+      </div>
+    </div>
+    <div class="col-3 Undefined-clickable clickable">
+      <div id="Undefined-hidden hidden">
+        <p>Undefined</p>
+      </div>
+      <div id="Undefined-showing">
+        <p>Undefined definition</p>
+      </div>
+    </div>
+    <div class="col-3 NaN-clickable clickable">
+      <div id="NaN-hidden hidden">
+        <p>NaN</p>
+      </div>
+      <div id="NaN-showing">
+        <p>NaN definition</p>
+      </div>
+    </div>
+    <div class="col-3 Null-clickable clickable">
+      <div id="Null-hidden hidden">
+        <p>Null</p>
+      </div>
+      <div id="Null-showing">
+        <p>Null definition</p>
+      </div>
+    </div>
+    <div class="col-3 Alert-clickable clickable">
+      <div id="Alert-hidden hidden">
+        <p>Alert</p>
+      </div>
+      <div id="Alert-showing">
+        <p>Alert definition</p>
+      </div>
+    </div>
+    <div class="col-3 Comments-clickable clickable">
+      <div id="Comments-hidden hidden">
+        <p>Comments</p>
+      </div>
+      <div id="Comments-showing">
+        <p>Comments definition</p>
+      </div>
+    </div>
+    <div class="col-3 jQuery-clickable clickable">
+      <div id="jQuery-hidden hidden">
+        <p>jQuery</p>
+      </div>
+      <div id="jQuery-showing">
+        <p>jQuery definition</p>
+      </div>
+    </div>
+    <div class="col-3 Attributes-clickable clickable">
+      <div id="Attributes-hidden hidden">
+        <p>Attributes</p>
+      </div>
+      <div id="Attributes-showing">
+        <p>Attributes definition</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
